# c64os-example-app

./: .gitignore  .gitmodules  Makefile  README.md  os  pyproject.toml  requirements.txt
c64util/: README.md  gen_car.py  gen_menu.py  gen_meta.py
c64util/schema/: app.py  car.py
scripts/generate/: about.t.py  menu.m.py
src/: main.S  main.s  menu.json
