[tool.poetry]
name = "c64os-example-app"
version = "0.1"
description = ""
authors = ["voidstar <voidstar@anachronauts.club>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cbmcodecs2 = "^1.2"
pydantic = "^1.10.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
